Patch by Barrett: Check for errors when obtaining information about the contained tracks from media files. Display an alert accordingly. Fixes ticket #6497. Thanks!

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@39157 a95241bf-73f2-0310-859d-f6bbb57e9c96